# NAFI

./: Cargo.toml  README.md  bors.toml  codecov.yaml  rustfmt.toml
.cargo/: config
.dependabot/: config.yaml
.github/: dependabot.yml  issue_label_bot.yaml
.github/workflows/: audit.yaml  bors-ci.yaml  bors.yaml  coverage.yaml  master-ci.yaml  master.yaml  pr.yaml
crates/nafi/: Cargo.toml
crates/nafi/src/: main.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  kind.rs  lexer.rs  lib.rs  nafi.ungram  parser.rs
crates/syntax/src/ast/: generated.rs
crates/syntax/src/parser/: expr.rs  fused_terminal.rs  source_file.rs
crates/syntax/src/parser/snapshots/: nafi_syntax__parser__expr__Expr-2.snap  nafi_syntax__parser__expr__Expr.snap
crates/syntax/src/snapshots/: nafi_syntax__parser__parse_expr-2.snap  nafi_syntax__parser__parse_expr-3.snap  nafi_syntax__parser__parse_expr.snap
crates/syntax/tests/: snapshots.rs
crates/syntax/tests/snapshots/: snapshots__parse@empty.nafi.snap  snapshots__parse@operators.nafi.snap  snapshots__parse@whitespace.nafi.snap  snapshots__parse_snapshot_tests@empty.nafi.snap  snapshots__parse_snapshot_tests@operators.nafi.snap  snapshots__parse_snapshot_tests@whitespace.nafi.snap
xtask/: Cargo.toml  README.md
xtask/src/: clean.rs  codegen.rs  flags.rs  help.rs  lib.rs  main.rs  utils.rs
xtask/src/codegen/: syntax.rs
