[package]
name = "xtask"
version = "0.0.0-dev"
edition = "2018"
publish = false

authors = ["Christopher Durham (CAD97) <cad97@cad97.com>"]

# Note: this tree should be as simple as possible so xtask starts up quickly
[dependencies]
anyhow = "1.0.40"
once_cell = "1.7.2"
pico-args = "0.4.1"
walkdir = "2.3.2"
